# budgeteur-rs

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOCS.md  Dockerfile  PLANNING.md  README.md  TODO.md  bacon.toml  build_image.sh  compose.yaml  dprint.json  flake.nix  tailwind.config.js
.github/: dependabot.yml  release.yml
.github/workflows/: cd.yaml  check-docker-build.yaml  ci.yml  enforce-versioning.yaml  manual_docker_build.yaml  release.yaml
assets/: favicon.xcf
backend/: Cargo.toml
backend/src/: auth.rs  db.rs  lib.rs  services.rs
common/: Cargo.toml
common/src/: category.rs  email.rs  lib.rs  password.rs  recurring_transaction.rs  savings_ratio.rs  transaction.rs  user.rs
docs/: auth-redirect-tech-spec.md  expenses-by-tag-design-spec.md  expenses-by-tag-tech-spec.md  navigation-design-spec.md  session-auth.md  transaction-table-design-spec.md  transaction-table-tech-spec.md  tui-architecture.md  untagged-transactions-tech-spec.md
frontend/: .gitignore  index.html  trunk.toml
frontend/src/: lib.rs  main.rs
migrations/: 0.17.0_to_0.18.0.sql  0.29.0_to_0.30.0.sql  0.9.0_to_0.10.0.sql
scripts/: build_image.sh  check_source_changed.sh
server/: Cargo.toml
server/src/: alert.rs  app_state.rs  endpoints.rs  health.rs  html.rs  lib.rs  routing.rs  timezone.rs
server/src/account/: accounts_page.rs  core.rs  delete_endpoint.rs  edit_endpoint.rs  mod.rs
server/src/auth/: api_keys.rs  api_middleware.rs  cookie.rs  log_out.rs  middleware.rs  mod.rs  password.rs  session.rs  user.rs
server/src/csv_import/: alert.rs  csv.rs  import_transactions.rs  mod.rs
server/src/dashboard/: cards.rs  charts.rs  handlers.rs  json.rs  mod.rs  transaction.rs
server/src/rule/: auto_tagging.rs  create.rs  db.rs  delete.rs  edit.rs  list.rs
server/src/tag/: create.rs  delete.rs  edit.rs  excluded_tags.rs  mod.rs  preferences.rs
server/src/test_utils/: form.rs  html.rs  http.rs
server/src/transaction/: create_endpoint.rs  edit_endpoint.rs  form.rs  mod.rs  query.rs  test_utils.rs  transactions_page.rs  view.rs
server/src/transaction/quick_tagging/: endpoint.rs  mod.rs  page.rs  queue.rs
shared/: Cargo.toml
shared/src/: auth.rs  currency.rs  dashboard.rs  lib.rs  routes.rs
src/: alert.rs  app_state.rs  auth.rs  auth_cookie.rs  auth_middleware.rs  balances.rs  category.rs  config.rs  csv.rs  dashboard.rs  dashboard_preferences.rs  database_id.rs  db.rs  endpoints.rs  error.rs  filters.rs  forgot_password.rs  html.rs  import.rs  import_result.rs  internal_server_error.rs  lib.rs  log_in.rs  log_out.rs  logging.rs  main.rs  navigation.js  navigation.rs  not_found.rs  pagination.rs  password.rs  register_user.rs  routes.rs  routing.rs  rule.rs  shared_templates.rs  state.rs  store.rs  tag.rs  tags_page.rs  (+5 more)
src/account/: accounts_page.rs  core.rs  create_endpoint.rs  create_page.rs  delete_endpoint.rs  edit_endpoint.rs  edit_page.rs
src/auth/: cookie.rs  forgot_password.rs  log_in.rs  log_out.rs  middleware.rs  mod.rs  redirect.rs  register_user.rs  token.rs  user.rs
src/balance/: balances_page.rs  core.rs  create_endpoint.rs  create_page.rs  delete_endpoint.rs  edit_endpoint.rs  edit_page.rs  mod.rs
src/csv_import/: account.rs  alert.rs  balance.rs  csv.rs  import_page.rs  import_transactions.rs  mod.rs
src/dashboard/: aggregation.rs  cards.rs  charts.rs  handlers.rs  mod.rs  preferences.rs  tables.rs  transaction.rs
src/model/: category.rs  mod.rs  password.rs  recurring_transaction.rs  savings_ratio.rs  transaction.rs  user.rs
src/models/: balance.rs  category.rs  mod.rs  password.rs  recurring_transaction.rs  savings_ratio.rs  transaction.rs  user.rs
src/routes/: category.rs  common_templates.rs  dashboard.rs  endpoints.rs  log_in.rs  log_out.rs  mod.rs  navigation.rs  register.rs  templates.rs  transaction.rs  transactions.rs  user.rs
src/routes/views/: balances.rs  dashboard.rs  import.rs  log_in.rs  mod.rs  new_category.rs  new_transaction.rs  register.rs  transactions.rs
src/rule/: auto_tagging.rs  create.rs  db.rs  edit.rs  list.rs  mod.rs  models.rs
src/stores/: balance.rs  category.rs  mod.rs  sql_store.rs  transaction.rs  user.rs
src/stores/sqlite/: balance.rs  category.rs  mod.rs  transaction.rs  user.rs
src/tag/: create.rs  db.rs  delete.rs  domain.rs  edit.rs  list.rs  mod.rs  preferences.rs
src/test_utils/: mod.rs
src/transaction/: core.rs  create_endpoint.rs  create_page.rs  create_transaction_endpoint.rs  delete_endpoint.rs  delete_transaction_endpoint.rs  edit_endpoint.rs  edit_page.rs  excluded_tags_endpoint.rs  grouping.rs  mod.rs  models.rs  new_transaction_page.rs  query.rs  range.rs  test_utils.rs  transactions_page.rs  view.rs  window.rs
src/transaction/quick_tagging/: input_guard.js  page.rs
static/: app.js  main.css
templates/: base.html  source.css
templates/components/: nav_link.html  spinner.html
templates/macros/: amount_display.html  transaction_summary.html
templates/partials/: alert.html  dashboard_charts.html  dashboard_summaries.html  edit_rule_form.html  edit_tag_form.html  error_page.html  import_form.html  nav_bar.html  navbar.html  new_category_form.html  new_rule_form.html  new_tag_form.html  rule_error.html  tag_error.html  transaction_table_row.html  transaction_table_row_empty.html
templates/partials/dashboard/: transaction.html  transaction_with_tags.html
templates/partials/log_in/: form.html
templates/partials/register/: form.html
templates/styles/forms/: button.html  input.html  label.html
templates/styles/text/: plain.html
templates/views/: balances.html  create_transaction.html  dashboard.html  dashboard_empty.html  edit_rule.html  edit_tag.html  forgot_password.html  import.html  internal_server_error_500.html  log_in.html  log_in_register_base.html  new_category.html  new_rule.html  new_tag.html  new_transaction.html  not_found_404.html  register.html  rules.html  sign_in.html  tags.html  transactions.html
tui/: Cargo.toml
tui/src/: app.rs  config.rs  dashboard.rs  key_binding.rs  main.rs  request.rs  runtime.rs
(+12 files in other folders)
