[package]
name = "budgeteur_rs"
version = "0.3.0"
edition = "2024"
default-run = "server"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["form", "macros", "multipart"] }
axum-extra = { version = "0.9.6", features = [
  "cookie-private",
  "typed-header",
] }
axum-htmx = "0.6.0"
axum-server = { version = "0.7.2" }
axum-test = "16.4.1"
bcrypt = "0.17.0"
clap = { version = "4.5.34", features = ["derive"] }
email_address = "0.2.9"
md5 = "0.7.0"
rpassword = "7.4.0"
rusqlite = { version = "0.34.0", features = ["bundled", "time"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = { version = "0.10.8" }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tower-livereload = "0.9.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
