[package]
name = "budgeteur_rs"
version = "0.15.0"
edition = "2024"
default-run = "server"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["form", "macros", "multipart"] }
axum-extra = { version = "0.10.1", features = [
  "cookie-private",
  "form",
  "typed-header",
] }
axum-htmx = "0.8.1"
axum-server = { version = "0.7.2" }
bcrypt = "0.17.1"
charming = "0.6.0"
clap = { version = "4.5.48", features = ["derive"] }
md5 = "0.8.0"
numfmt = "1.2.0"
rpassword = "7.4.0"
rusqlite = { version = "0.37.0", features = ["bundled", "time"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = { version = "0.10.9" }
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["serde", "local-offset"] }
time-tz = "2.0.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tower-livereload = "0.9.6" # For debug builds only
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zxcvbn = "3.1.0"

[dev-dependencies]
axum-test = "18.1.0"
scraper = "0.24.0"
serde_html_form = "0.2.8"
