[package]
name = "budgeteur_rs"
version = "0.29.0"
edition = "2024"
default-run = "server"

[dependencies]
axum = { version = "0.8.8", features = ["form", "macros", "multipart"] }
axum-extra = { version = "0.12.5", features = [
  "cookie-private",
  "form",
  "typed-header",
] }
axum-htmx = "0.8.1"
axum-server = { version = "0.8.0" }
bcrypt = "0.18.0"
charming = "0.6.0"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
maud = { version = "0.27.0", features = ["axum"] }
md5 = "0.8.0"
numfmt = "1.2.0"
rpassword = "7.4.0"
rusqlite = { version = "0.38.0", features = ["bundled", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = { version = "0.10.9" }
sscanf = "0.4.4"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "local-offset"] }
time-tz = "2.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "fs"] }
tower-livereload = "0.10.2" # For debug builds only
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
zxcvbn = "3.1.0"

[dev-dependencies]
axum-test = "18.7.0"
scraper = "0.25.0"
serde_html_form = "0.4.0"
