[package]
name = "budgeteur_tui"
version.workspace = true
edition.workspace = true

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
