[package]
name = "budgeteur_tui"
version.workspace = true
edition.workspace = true

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = [
  "json"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
hex = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
toml = "1.1"
