[package]
name = "budgeteur_tui"
version.workspace = true
edition.workspace = true

[dependencies]
budgeteur_shared = { path = "../shared" }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
ed25519-dalek = { version = "3", features = ["pkcs8", "alloc"] }
hex = "0.4"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = [ "json", "rustls" ] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde", "local-offset", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
